renamed file commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>qr-code</title>
-    <link rel="stylesheet" href="note.css" />
+    <link rel="stylesheet" href="./note.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <div class="content">
       <div class="container">
         <div class="bar-code">
-          <img src="image-qr-code.png" type="image/PNG" />
+          <img src="./image-qr-code.png" type="image/PNG" />
         </div>
 
         <div class="bold-text">
